--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE HTML>
+<html>
+<head>
+  <p><a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">Download!</a>.</p>
+</head>
+</html>
