--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <p><a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">Download!</a>.</p>
+  <h1><a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">Download!</a>.</h1>
 </head>
 </html>
