--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <h1><a href="https://sploder-saptarshi.github.io/flashplayer/Adobe%20Flash%20Player%2032.exe" target="_blank" rel="noopener noreferrer">Download!</a></h1>
+  <h1><a href="http://flash.sploder.tk/Adobe%20Flash%20Player%2032.exe" target="_blank" rel="noopener noreferrer">Download!</a></h1>
 </head>
 </html>
